Fix spotify playlists that are over 50 tracks